# lng

./: Cargo.toml  README.md  build.sh  flake.nix
compiler/: Cargo.toml
compiler-bin/: Cargo.toml
compiler-bin/src/: main.rs
compiler-derive/: Cargo.toml
compiler-derive/src/: lib.rs
compiler/src/: ast.rs  errors.rs  grammar.lalrpop  grammar.pest  identifier.rs  lib.rs  name_mangler.rs  parse.rs  runtime.rs  type_check.rs  types.rs
compiler/src/compile/: context.rs  errors.rs  mangler.rs  mod.rs  module.rs  rc_builder.rs  scope.rs  string_builder.rs  value.rs
compiler/src/compile/builtins/: array.rs  mod.rs  rc.rs  string.rs  type_descriptor.rs  vtable_entry.rs
compiler/src/compile/compilers/: expression.rs
compiler/src/parser/: mod.rs
compiler/src/std/: mod.rs  runtime.rs
compiler/src/type_check/: declaration_checker.rs  declarations.rs  definition_checker.rs  errors.rs  expression_checker.rs  mod.rs
compiler/src/types/: functions.rs  generics.rs  interfaces.rs  mod.rs  modules.rs  store.rs  structs.rs
compiler/stdlib/: std.lng
compiler/tests/: integers.rs  interfaces.rs  modules.rs  structs.rs
compiler/tests/common/: mod.rs
src/: ast.rs  compile.rs  grammar.pest  main.rs  parse.rs  runtime.rs  stdlib.rs  type_check.rs  types.rs
src/compile/: context.rs  mod.rs  module.rs  rc_builder.rs  scope.rs
stdlib/: std.lng
