[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
itertools = "0.14.0"
rand = "0.9.1"
thiserror = "2.0.12"
string-interner = "0.19.0"
lalrpop-util = {version = "0.22.1", features = ["lexer"]}

[build-dependencies]
lalrpop = "0.22.1"
